@@ -1,3 +1,9 @@
+2001-03-20  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/report/income-expense-graph.scm,
+	income-or-expense-pie.scm: Fixed account choosing, fixed default
+	report currency, added currency exchange calculation. 
+
 2001-03-20  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/dialog-progress.c
